--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ better-profanity==0.7.0
 celery==5.1.2
 django-celery-results==2.2.0
 django-widget-tweaks==1.4.8
+better-profanity==0.7.0
+django-celery-results==2.2.0
