--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ django-celery-results==2.2.0
 django-widget-tweaks==1.4.8
 better-profanity==0.7.0
 django-celery-results==2.2.0
+django-widget-tweaks==1.4.8
